# claude-waypoints

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: test.yml
agents/: wp-developer.md  wp-knowledge-curator.md  wp-tester.md  wp-uncle-bob.md
config/: schema.json  settings.example.json  wp-config.json
docs/: architecture.md  custom-agents.md  future-directions.md  supervisor-mode.md  supported-technologies.md  troubleshooting.md
hooks/: wp-activation.py  wp-auto-compile.py  wp-auto-test.py  wp-cleanup-markers.py  wp-orchestrator.py  wp-phase-guard.py
hooks/lib/: agent_parser.py  config_reader.py  formatters.py  hook_io.py  markers.py  pattern_matcher.py  profile_detector.py  settings_manager.py  wp_agents.py  wp_cli.py  wp_config.py  wp_embeddings.py  wp_graph.py  wp_knowledge.py  wp_logging.py  wp_migration.py  wp_state.py
scripts/: README.md  migrate-knowledge.py  release.sh
skills/: wp-create-agent.md  wp-reset.md  wp-start.md  wp-status.md
tests/: run_tests.sh  test_helper.bash
tests/fixtures/mocks/: cargo  go  gradlew  mvn  npm  npx  python
tests/integration/: workflow.bats
tests/unit/: install.bats  uninstall.bats
wp_supervisor/: __init__.py  __main__.py  _paths.py  context.py  display.py  feedback_capping.py  feedback_dedup.py  feedback_queue.py  file_tracker.py  hook_messages.py  hooks.py  logger.py  markers.py  orchestrator.py  review_coordinator.py  review_trigger.py  reviewer.py  session.py  stdin_reader.py  subagents.py  templates.py
(+40 files in other folders)
